--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@digdir/design-system-react": "^0.50.0",
     "@digdir/design-system-tokens": "^0.13.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
     "@navikt/aksel-icons": "^6.1.0",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "next": "14.1.0",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-sliding-pane": "^7.3.0"
   },
